Pagination and Sorting
Added pagination and sorting for getting all posts