@@ -6,6 +6,9 @@ import com.springboot.blog.exceptions.ResourceNotFoundException;
 import com.springboot.blog.repository.PostRepository;
 import com.springboot.blog.service.PostService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -28,9 +31,14 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public List<PostDTO> getAllPosts() {
-        List<Post> getPosts = postRepository.findAll();
-        return getPosts.stream().map(this::mapToDTO).collect(Collectors.toList());
+    public List<PostDTO> getAllPosts(int pageNo, int pageSize) {
+        // create pageable instance
+        Pageable pageable = PageRequest.of(pageNo, pageSize);
+        Page<Post> getPosts = postRepository.findAll(pageable);
+
+        //get content for page object
+        List<Post> listOfPosts = getPosts.getContent().stream().toList();
+        return listOfPosts.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
 
     @Override
